# pyrogen

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py
.cargo/: config.toml
.github/workflows/: ci.yaml
crates/pyrogen_cache/: Cargo.toml
crates/pyrogen_cache/src/: cache_key.rs  lib.rs
crates/pyrogen_checker/: Cargo.toml
crates/pyrogen_checker/resources/test/fixtures/: pyproject.toml
crates/pyrogen_checker/resources/test/package/: pyproject.toml
crates/pyrogen_checker/src/: checker.rs  code_selector.rs  codes.rs  directives.rs  fs.rs  lib.rs  line_width.rs  logging.rs  pyproject_toml.rs  rule_selector.rs  source_kind.rs  test.rs  type_ignore.rs
crates/pyrogen_checker/src/check/: mod.rs  type_ignore.rs
crates/pyrogen_checker/src/check/analyze/: mod.rs  parseNodes.rs  parseTreeWalker.rs
crates/pyrogen_checker/src/check/typecheck/: mod.rs
crates/pyrogen_checker/src/checkers/: filesystem.rs  imports.rs  mod.rs  type_ignore.rs
crates/pyrogen_checker/src/checkers/typecheck/: mod.rs
crates/pyrogen_checker/src/message/: diff.rs  github.rs  json.rs  mod.rs  text.rs
crates/pyrogen_checker/src/message/snapshots/: pyrogen_checker__message__github__tests__output.snap  pyrogen_checker__message__json__tests__output.snap  pyrogen_checker__message__text__tests__default.snap
crates/pyrogen_checker/src/registry/: mod.rs  rule_set.rs
crates/pyrogen_checker/src/settings/: code_table.rs  flags.rs  mod.rs  rule_table.rs  types.rs
crates/pyrogen_checker/src/snapshots/: pyrogen_checker__type_ignore__tests__noqa_all_case_insensitive.snap  pyrogen_checker__type_ignore__tests__noqa_all_leading_comment.snap  pyrogen_checker__type_ignore__tests__noqa_all_multi_space.snap  pyrogen_checker__type_ignore__tests__noqa_all_no_space.snap  pyrogen_checker__type_ignore__tests__noqa_code.snap  pyrogen_checker__type_ignore__tests__noqa_code_leading_comment.snap  pyrogen_checker__type_ignore__tests__noqa_code_multi_space.snap  pyrogen_checker__type_ignore__tests__noqa_code_no_space.snap  pyrogen_checker__type_ignore__tests__noqa_code_trailing_comment.snap  pyrogen_checker__type_ignore__tests__noqa_codes.snap  pyrogen_checker__type_ignore__tests__noqa_codes_case_insensitive.snap  pyrogen_checker__type_ignore__tests__noqa_codes_leading_comment.snap  pyrogen_checker__type_ignore__tests__noqa_codes_multi_space.snap  pyrogen_checker__type_ignore__tests__noqa_codes_no_space.snap  pyrogen_checker__type_ignore__tests__noqa_codes_trailing_comment.snap  pyrogen_checker__type_ignore__tests__noqa_empty_bracket.snap  pyrogen_checker__type_ignore__tests__noqa_invalid_codes.snap  pyrogen_checker__type_ignore__tests__noqa_invalid_suffix_with_space.snap  pyrogen_checker__type_ignore__tests__noqa_leading_space.snap  pyrogen_checker__type_ignore__tests__noqa_open_bracket.snap  pyrogen_checker__type_ignore__tests__noqa_typo.snap  pyrogen_checker__type_ignore__tests__pyrogen_exemption_all_case_insensitive.snap  pyrogen_checker__type_ignore__tests__pyrogen_exemption_codes.snap
crates/pyrogen_cli/: Cargo.toml
crates/pyrogen_cli/src/: args.rs  cache.rs  diagnostics.rs  lib.rs  printer.rs  resolve.rs
crates/pyrogen_cli/src/commands/: check.rs  check_stdin.rs  mod.rs
crates/pyrogen_cli/src/commands/snapshots/: pyrogen_cli__commands__check__test__io-error_E902.py.snap
crates/pyrogen_diagnostics/: Cargo.toml
crates/pyrogen_diagnostics/src/: diagnostic.rs  edit.rs  fix.rs  lib.rs  source_map.rs  violation.rs
crates/pyrogen_macros/: Cargo.toml
crates/pyrogen_macros/src/: cache_key.rs  config.rs  lib.rs
crates/pyrogen_parser/: Cargo.toml
crates/pyrogen_parser/src/: lib.rs
crates/pyrogen_python_ast/: Cargo.toml
crates/pyrogen_python_ast/src/: imports.rs  lib.rs  visitor.rs
crates/pyrogen_python_index/: Cargo.toml
crates/pyrogen_python_index/src/: comment_ranges.rs  indexer.rs
crates/pyrogen_python_trivia/: Cargo.toml
crates/pyrogen_python_trivia/src/: comment_ranges.rs  lib.rs  textwrap.rs  whitespace.rs
crates/pyrogen_source_file/: Cargo.toml
crates/pyrogen_source_file/src/: lib.rs  line_index.rs  locator.rs  newlines.rs  serialize.rs
crates/pyrogen_text_size/: Cargo.toml
crates/pyrogen_text_size/src/: lib.rs  range.rs  size.rs
crates/pyrogen_wasm/: Cargo.toml
crates/pyrogen_wasm/src/: lib.rs
crates/pyrogen_workspace/: Cargo.toml
crates/pyrogen_workspace/src/: configuration.rs  lib.rs  options.rs  options_base.rs  pyproject.rs  resolver.rs  settings.rs
python/pyrogen_check/: __main__.py
