[package]
name = "pyrogen_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
globset = { workspace = true }
seahash = "4.1.0"
filetime = { workspace = true }

[dev-dependencies]
pyrogen_macros = { path = "../pyrogen_macros" }
