[package]
name = "pyrogen_checker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrogen_macros = { path = "../pyrogen_macros" }
pyrogen_cache = { path = "../pyrogen_cache" }

clap = { workspace = true, features = ["derive", "string"], optional = true }
serde = { workspace = true }
anyhow = { workspace = true }
pep440_rs = { version = "0.3.1", features = ["serde"] }
strum_macros = { workspace = true }
strum = { workspace = true }
globset = { workspace = true }
log = { workspace = true }
path-absolutize = { workspace = true, features = [
    "once_cell_cache",
    "use_unix_paths_on_wasm",
] }
pathdiff = { version = "0.2.1" }
colored = { workspace = true }
chrono = { workspace = true }
fern = { version = "0.6.2" }
