[package]
name = "pyrogen_checker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrogen_macros = { path = "../pyrogen_macros" }
pyrogen_cache = { path = "../pyrogen_cache" }
pyrogen_source_file = { path = "../pyrogen_source_file", features = ["serde"] }
pyrogen_python_ast = { path = "../pyrogen_python_ast" }
pyrogen_python_index = { path = "../pyrogen_python_index" }
pyrogen_python_trivia = { path = "../pyrogen_python_trivia" }

annotate-snippets = { version = "0.9.1", features = ["color"] }
anyhow = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "string"], optional = true }
colored = { workspace = true }
fern = { version = "0.6.2" }
globset = { workspace = true }
is-macro = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
pep440_rs = { version = "0.3.1", features = ["serde"] }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
path-absolutize = { workspace = true, features = [
    "once_cell_cache",
    "use_unix_paths_on_wasm",
] }
pathdiff = { version = "0.2.1" }
pyproject-toml = "0.7.0"
result-like = "0.4.6"
rustc-hash = { workspace = true }
rustpython-ast = { workspace = true }
rustpython-parser = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
test-case = { workspace = true }
