[package]
name = "pyrogen_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
#authors.workspace = true
#homepage.workspace = true
#documentation.workspace = true
#repository.workspace = true
#license.workspace = true
readme = "../../README.md"

[[bin]]
name = "pyrogen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrogen_parser = { path = "../pyrogen_parser" }
pyrogen_workspace = { path = "../pyrogen_workspace" }
pyrogen_checker = { path = "../pyrogen_checker", features = ["clap"] }

clap = { workspace = true, features = ["derive", "env"] }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
path-absolutize = { workspace = true, features = ["once_cell_cache"] }
shellexpand = { workspace = true }
itertools = { workspace = true }
argfile = { version = "0.1.6" }
wild = "2.2.0"
