[package]
name = "pyrogen_cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
#authors.workspace = true
#homepage.workspace = true
#documentation.workspace = true
#repository.workspace = true
#license.workspace = true
readme = "../../README.md"

[[bin]]
name = "pyrogen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyrogen_parser = { path = "../pyrogen_parser" }
pyrogen_workspace = { path = "../pyrogen_workspace" }
pyrogen_checker = { path = "../pyrogen_checker", features = ["clap"] }
pyrogen_diagnostics = { path = "../pyrogen_diagnostics" }
pyrogen_macros = { path = "../pyrogen_macros" }
pyrogen_source_file = { path = "../pyrogen_source_file" }
pyrogen_python_ast = { path = "../pyrogen_python_ast" }

anyhow = { workspace = true }
argfile = { version = "0.1.6" }
bitflags = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
colored = { workspace = true }
filetime = { workspace = true }
ignore = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
path-absolutize = { workspace = true, features = ["once_cell_cache"] }
rayon = { version = "1.8.0" }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
wild = { version = "2.2.0" }
clearscreen = "2.0.0"

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
tempfile = "3.8.0"
