[package]
name = "pyrogen_diagnostics"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true, features = [] }
rustpython-parser = { workspace = true }
