[package]
name = "pyrogen_python_ast"
publish = false
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

is-macro = { workspace = true }
rustc-hash = { workspace = true }
rustpython-parser = { workspace = true }
rustpython-ast = { workspace = true }
