[package]
name = "pyrogen_python_index"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
pyrogen_python_trivia = { path = "../pyrogen_python_trivia" }

pyrogen_python_ast = { path = "../pyrogen_python_ast" }
pyrogen_source_file = { path = "../pyrogen_source_file" }

rustpython-parser = { workspace = true }
itertools = { workspace = true }
